@@ -200,6 +200,48 @@ $resources[++$i] = array(
 $resources[++$i] = array(
     'type'                  => 'document',
     'contentType'           => 'text/html',
+    'pagetitle'             => 'GoodNews Profile Update',
+    'longtitle'             => '',
+    'description'           => '',
+    'alias'                 => 'goodnews-profile-update',
+    'link_attributes'       => '',
+    'published'             => 1,
+    'pub_date'              => 0,
+    'unpub_date'            => 0,
+    'isfolder'              => 0,
+    'introtext'             => '',
+    'content'               => 'sample.profile-update.resource.tpl',
+    'richtext'              => 0,
+    'template'              => 'sample.GoodNewsProfileTemplate',
+    'searchable'            => 0,
+    'cacheable'             => 1,
+    'createdby'             => 0,
+    'createdon'             => $epoch,
+    'editedby'              => 0,
+    'editedon'              => $epoch,
+    'deleted'               => 0,
+    'deletedon'             => 0,
+    'deletedby'             => 0,
+    'publishedon'           => $epoch,
+    'publishedby'           => 0,
+    'menutitle'             => '',
+    'donthit'               => 0,
+    'privateweb'            => 0,
+    'privatemgr'            => 0,
+    'content_dispo'         => 0,
+    'hidemenu'              => 1,
+    'class_key'             => 'modDocument',
+    'context_key'           => 'web',
+    'content_type'          => 1,
+    'uri_override'          => 0,
+    'hide_children_in_tree' => 0,
+    'show_in_tree'          => 1,
+    'properties'            => NULL,
+);
+
+$resources[++$i] = array(
+    'type'                  => 'document',
+    'contentType'           => 'text/html',
     'pagetitle'             => 'GoodNews Subscription',
     'longtitle'             => '',
     'description'           => '',
