@@ -1,5 +1,7 @@
 Changelog for GoodNews
 
+- added feature to use GoodNewsUpdateProfile Snippet for logged in MODX users (not only via sid URL param)
+
 
 GoodNews 1.4.6-pl (2017-03-10)
 --------------------------------------------------
